--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -5,5 +5,6 @@
     "contact": "اتصال",
     "login": "تسجيل الدخول",
     "organizers": "المنظمين",
-  "welcome": "مرحبا بك في EventSys"
+  "Locate and celebrate upcoming events.": "اكتشف واحتفل بالأحداث القادمة.",
+  "Discover Events": "اكتشف الفعاليات"
 }
