--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -5,5 +5,6 @@
     "contact": "Contact",
     "login": "Login",
     "organizers": "Organizers",
-  "welcome": "Welcome to EventSys"
+  "Locate and celebrate upcoming events.": "Locate and celebrate upcoming events.",
+  "Discover Events": "Discover Events"
 }
