feat:build new section in home page make it as one component and add images

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -6,5 +6,8 @@
     "login": "تسجيل الدخول",
     "organizers": "المنظمين",
   "Locate and celebrate upcoming events.": "اكتشف واحتفل بالأحداث القادمة.",
-  "Discover Events": "اكتشف الفعاليات"
+  "Discover Events": "اكتشف الفعاليات",
+  "Music Concerts": "حفلات موسيقية",
+  "Explore By Cities": "استكشف حسب المدن",
+  "Popular Location": "المواقع الشائعة"
 }
