--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -6,5 +6,8 @@
     "login": "Login",
     "organizers": "Organizers",
   "Locate and celebrate upcoming events.": "Locate and celebrate upcoming events.",
-  "Discover Events": "Discover Events"
+  "Discover Events": "Discover Events",
+  "Music Concerts": "Music Concerts",
+  "Explore By Cities": "Explore By Cities",
+  "Popular Location": "Popular Location"
 }
