feat:build components for footer section and make some enhance of other comp

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -9,5 +9,17 @@
   "Discover Events": "اكتشف الفعاليات",
   "Music Concerts": "حفلات موسيقية",
   "Explore By Cities": "استكشف حسب المدن",
-  "Popular Location": "المواقع الشائعة"
+  "Popular Location": "المواقع الشائعة",
+  "Featured Events": "الفعاليات المميزة",
+  "Featured" : "مميز",
+  "how it works": "كيف تعمل",
+  "starting soon": "يبدأ قريبا",
+  "Starting Soon Events": "الفعاليات التي تبدأ قريبا",
+  "featured organizers": "المنظمين المميزين",
+  "testimonials": "الشهادات",
+  "What Our Attendees Say": "ماذا يقول الحضور لدينا",
+  "Events Added": "الفعاليات المضافة",
+  "Event Organizers": "منظمو الفعاليات",
+  "Event Hosted": "الفعاليات المستضافة",
+  "Tickets Sold": "التذاكر المباعة"
 }
