--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -9,5 +9,17 @@
   "Discover Events": "Discover Events",
   "Music Concerts": "Music Concerts",
   "Explore By Cities": "Explore By Cities",
-  "Popular Location": "Popular Location"
+  "Popular Location": "Popular Location",
+  "Featured Events": "Featured Events",
+  "Featured" : "Featured",
+  "how it works": "HOW IT WORKS",
+  "starting soon": "Starting Soon",
+  "Starting Soon Events": "Starting Soon Events",
+  "featured organizers": "Featured Organizers",
+  "testimonials": "TESTIMONIALS",
+  "What Our Attendees Say": "What Our Attendees Say",
+  "Events Added": "Events Added",
+  "Event Organizers": "Event Organizers",
+  "Event Hosted": "Event Hosted",
+  "Tickets Sold": "Tickets Sold"
 }
