fix:it was some style not suit , i fix it for some components

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -21,5 +21,18 @@
   "Events Added": "الفعاليات المضافة",
   "Event Organizers": "منظمو الفعاليات",
   "Event Hosted": "الفعاليات المستضافة",
-  "Tickets Sold": "التذاكر المباعة"
+  "Tickets Sold": "التذاكر المباعة",
+  "Follow Us": "تابعنا",
+  "EventLab is a global self-service ticketing platform for live experiences that allows anyone to create, share, find and attend events.": "EventLab هي منصة تذاكر ذاتية الخدمة عالمية للتجارب الحية تتيح لأي شخص إنشاء ومشاركة والعثور على وحضور الفعاليات.",
+  "Event Ticket Booking System": "نظام حجز تذاكر الفعاليات",
+  "Contact": "اتصل بنا",
+  "Blogs": "المدونات",
+  "About": "معلومات عنا",
+  "Privacy Policy": "سياسة الخصوصية",
+  "Terms of Service": "شروط الخدمة",
+  "Help": "مساعدة",
+  "Quick Link": "رابط سريع",
+  "Be the first to know about upcoming events, exclusive discounts, and insider tips! Subscribe to our newsletter now and stay connected with us.": "كن أول من يعرف عن الفعاليات القادمة والخصومات الحصرية والنصائح الداخلية! اشترك في نشرتنا الإخبارية الآن وابق على اتصال معنا.",
+  "Subscribe": "اشترك",
+  "Enter your email": "أدخل بريدك الإلكتروني"
 }
