--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -21,5 +21,18 @@
   "Events Added": "Events Added",
   "Event Organizers": "Event Organizers",
   "Event Hosted": "Event Hosted",
-  "Tickets Sold": "Tickets Sold"
+  "Tickets Sold": "Tickets Sold",
+  "Follow Us": "Follow Us",
+  "EventLab is a global self-service ticketing platform for live experiences that allows anyone to create, share, find and attend events.": "EventLab is a global self-service ticketing platform for live experiences that allows anyone to create, share, find and attend events.",
+  "Event Ticket Booking System": "Event Ticket Booking System",
+  "Contact": "Contact",
+  "Blogs": "Blogs",
+  "About Us": "About Us",
+  "Privacy Policy": "Privacy Policy",
+  "Terms of Service": "Terms of Service",
+  "Help": "Help",
+  "Quick Link": "Quick Link",
+  "Be the first to know about upcoming events, exclusive discounts, and insider tips! Subscribe to our newsletter now and stay connected with us.": "Be the first to know about upcoming events, exclusive discounts, and insider tips! Subscribe to our newsletter now and stay connected with us.",
+  "Subscribe": "Subscribe",
+  "Enter your email": "Enter your email"
 }
