feat:creating register page

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -34,5 +34,26 @@
   "Quick Link": "رابط سريع",
   "Be the first to know about upcoming events, exclusive discounts, and insider tips! Subscribe to our newsletter now and stay connected with us.": "كن أول من يعرف عن الفعاليات القادمة والخصومات الحصرية والنصائح الداخلية! اشترك في نشرتنا الإخبارية الآن وابق على اتصال معنا.",
   "Subscribe": "اشترك",
-  "Enter your email": "أدخل بريدك الإلكتروني"
+  "Enter your email": "أدخل بريدك الإلكتروني",
+  "Welcome Back": "مرحبًا بعودتك",
+  "Sign in to your account": "تسجيل الدخول إلى حسابك",
+  "Email": "البريد الإلكتروني",
+  "Password": "كلمة المرور",
+  "Forgot your password?": "هل نسيت",
+  "Sign in": "تسجيل الدخول",
+  "New on our platform?": "جديد على منصتنا؟",
+  "Create an account": "إنشاء حساب",
+  "Remember Me": "تذكرني",
+  "Forgot Password?": "هل نسيت كلمة المرور؟",
+  "Sign in to your account to continue": "تسجيل الدخول إلى حسابك للمتابعة",
+  "I agree to the": "أوافق على",
+  "Terms & Conditions": "الشروط والأحكام",
+  "Create Account": "إنشاء حساب",
+  "Sign up to get started with your account": "سجل للبدء بحسابك",
+  "Register": "تسجيل",
+  "Full Name": "الاسم الكامل",
+  "Username": "اسم المستخدم",
+  "Confirm Password": "تأكيد كلمة المرور",
+  "Already have an account?": "هل لديك حساب؟",
+  "Sign in here": "تسجيل الدخول هنا"
 }
