--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,10 +1,10 @@
 {
 
-    "home": "Home",
-    "events": "Events",
-    "contact": "Contact",
-    "login": "Login",
-    "organizers": "Organizers",
+  "home": "Home",
+  "events": "Events",
+  "contact": "Contact",
+  "login": "Login",
+  "organizers": "Organizers",
   "Locate and celebrate upcoming events.": "Locate and celebrate upcoming events.",
   "Discover Events": "Discover Events",
   "Music Concerts": "Music Concerts",
@@ -34,5 +34,26 @@
   "Quick Link": "Quick Link",
   "Be the first to know about upcoming events, exclusive discounts, and insider tips! Subscribe to our newsletter now and stay connected with us.": "Be the first to know about upcoming events, exclusive discounts, and insider tips! Subscribe to our newsletter now and stay connected with us.",
   "Subscribe": "Subscribe",
-  "Enter your email": "Enter your email"
+  "Enter your email": "Enter your email",
+  "Welcome Back": "Welcome Back",
+  "Sign in to your account": "Sign in to your account",
+  "Email": "Email",
+  "Password": "Password",
+  "Forgot your password?": "Forgot your password?",
+  "Sign in": "Sign in",
+  "New on our platform?": "New on our platform?",
+  "Create an account": "Create an account",
+  "Remember Me": "Remember Me",
+  "Forgot Password?": "Forgot Password?",
+  "Sign in to your account to continue": "Sign in to your account to continue",
+  "I agree to the": "I agree to the",
+  "Terms & Conditions": "Terms & Conditions",
+  "Create Account": "Create Account",
+  "Sign up to get started with your account": "Sign up to get started with your account",
+  "Register": "Register",
+  "Full Name": "Full Name",
+  "Username": "Username",
+  "Confirm Password": "Confirm Password",
+  "Already have an account?": "Already have an account?",
+  "Sign in here": "Sign in here"
 }
