feat:apply ticket-management (frontend-backend)

--- a/frontend/src/locales/ar.json
+++ b/frontend/src/locales/ar.json
@@ -97,5 +97,36 @@
   },
   "common": {
     "filters": "فلاتر"
+  },
+  "tickets": {
+    "part": "التذاكر",
+    "titleSingular": "تذكرة",
+    "overview": { "title": "نظرة عامة" },
+    "add": {
+      "title": "إضافة تذكرة",
+      "button": "إضافة تذكرة",
+      "saveButton": "حفظ التذكرة",
+      "success": "تم إنشاء التذكرة بنجاح",
+      "failed": "فشل إنشاء التذكرة. الرجاء المحاولة مرة أخرى.",
+      "saved": "تم حفظ التذكرة بنجاح"
+    },
+    "edit": {
+      "title": "تعديل التذكرة",
+      "updateButton": "تحديث التذكرة",
+      "success": "تم تحديث التذكرة بنجاح",
+      "failed": "فشل تحديث التذكرة. الرجاء المحاولة مرة أخرى.",
+      "loadFailed": "فشل تحميل بيانات التذكرة"
+    },
+    "form": {
+      "name": "ادخل اسم التذكرة",
+      "price": "ادخل سعر التذكرة",
+      "quantity": "ادخل كمية التذاكر المتاحة",
+      "sold": "عدد التذاكر المباعة"
+    },
+    "loading": "جاري تحميل التذاكر...",
+    "deleteConfirm": "هل أنت متأكد أنك تريد حذف هذه التذكرة؟ لا يمكن التراجع عن هذا الإجراء.",
+    "deleteSuccess": "تم حذف التذكرة بنجاح",
+    "deleteFailed": "فشل حذف التذكرة. الرجاء المحاولة مرة أخرى.",
+    "cannotDeleteSold": "لا يمكن حذف نوع التذكرة الذي تم بيعه"
   }
 }
